adapted the fetchs in the NewUserForm using ParadigmFetch, need to check backend
